# keybot

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.sqlx/: query-06f077a01e06b37b19b5d0ecd73de2d84b4201be15780d75a3509e7a8ba79d66.json  query-0ae3d47410b440994c2088faffc7114880aaeb72df80c1d52ab2900a66a3ae57.json  query-14249055e9adaae3151302f2ee6c894ab1cfcd0bf3cfcc85ba96ba49cfae1890.json  query-1ad3e64358f1620337d6273377d06d4078c0a41aa6c44be7a7c0721edf6fb8f7.json  query-21de12ff05cc3776c1323586c8b3d38a6dabe06f40583ea83ab0a78ca135338c.json  query-3642cb9c1eaa36f21f2ea93b00d87d2fa2b9ce2ad1e97a0c997a1c0467110e0b.json  query-4d174037df7ba26c49253e01ae9c192c3cb3f220335772b53143de73d94fed45.json  query-6c931d93bdb13827ffd0fde0baeafb2726a6d8099a5c2ea9c8799088fa39ebbb.json  query-74ed1e2a204fb56939addbefc4ce01de4016486274336a127dd08f549f1bb62a.json  query-790049e4677d78d274c0521995292f6b3422b43a4c349ee6f679b4b0ae6c4c08.json  query-915fc3ca54ab28d71a0c52eda9f34181d2afa8700e2252fc6cb534fb693630a2.json  query-a5e25d792496e8aea522e1c08ea97160a58b0d257f18d855971f372dc7367538.json  query-c1eb0e4291d2e91c94d3786253a6048066e7cd165073855c17929d1bc5c93437.json  query-c3d9b6da00fb83ff885b709d031d9630d03a62648b612b6da39fbe41fded2d7e.json  query-d3a61de7f79d6c53f66d2f13556cf6a8cc07cd89f80592aff5d6998efd816b6d.json  query-e92a1d2a594c82c63d98fdd60d9aa677818611272f4d49b91001f59bfc7ab980.json  query-ec6295c7519266d68e43d1720f8953ee666ac36957d43dfeaadd9c4845d5a618.json  query-ecf7dc61fd483dc66ad13b43943a447619315daeb3c0dc1ceabe34c2479214d2.json  query-f053decbd91861ef77bf5e179abc71c6d9060f44cc90f95fee77bad051001f31.json
migrations/: 20240130214702_tables.sql
src/: main.rs
src/modules/: commands.rs  db.rs
