[package]
name = "keybot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive", "color", "usage", "help", "suggestions"] }
color-eyre = "0.6.2"
dotenv = "0.15.0"
poise = "0.6.1"
serenity = { version = "0.12.0", features = ["client", "gateway", "rustls_backend", "model", "cache", "tokio_task_builder", "utils"] }
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "parking_lot", "tracing", "signal"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["parking_lot", "env-filter"] }
