[package]
name = "keybot"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive", "color", "usage", "help", "suggestions"] }
color-eyre = "0.6.2"
config = { version = "0.13.4", features = ["json5_rs", "json5"], default-features = false }
dotenv = "0.15.0"
poise = "0.6.1"
serenity = { version = "0.12.0", features = ["client", "gateway", "rustls_backend", "model", "cache", "tokio_task_builder", "utils"] }
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "parking_lot", "tracing", "signal"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["parking_lot", "env-filter"] }
